Version 1.11.15+dev:
 * Language and i18n:
   * Updated translations:
 * Miscellaneous and bug fixes:
   * Backported Elvish_Hunter's wmltools GUI from master
   * Fix bug #22116: unlock movement when attacking enemy+discovering in fog
   * Fix bug #21397: "Saving and loading may cause a side's turn is not 
     initialized".
   * Fix bug which caused no units to be displayed when reloading an end of 
     scenario save, by stripping them from the save file. However, this does 
     not fix bug #15545, which was the reason that this behavior was introduced. 
   * Fix bug #22123 "Replays don't reset map when reset button is pressed, 
     causing OOS"
     
Version 1.11.15:
 * Graphics:
   * Fixed bug #22045: Only blit neutral surfaces.
 * Language and i18n:
   * Updated translations: Portuguese
 * Miscellaneous and bug fixes:
   * Reallow selection of another unit on same side without deselect first
   * Fix bug #22042: filesystem content disclosure issue affecting Lua APIs
   * Fix bug #21867: team flag colors not refreshed after making use of
     [modify_side] color= unless a new flag set is also provided.
   * Fix a bug where in movement records, "skip_sighted" was sometimes
     spelled as "skip_sighed".
   * Remove 'allow_new_game=no' entries from random map new game list
   * Fix bug #22020: make base units with variations help entry clickable
     from the 'Unit Description' menu entry or from side pane.
   * Fix bug #21977: ready blocked on scenario transition, when
     allow_new_game=yes
   * Fix minor issue mentioned in #21800: team names not displayed properly
     in debug mode.
   * Fixup to bug fix 21882: fight_on_without_leader replaced with 
     "defeat_condition" flag  of team. remove_from_carryover_on_leaders_loss
     renamed to "remove_from_carryover_on_defeat". The WML developer now has
     much more control: Instead of 'fight_on_without_leader'=yes/no, they have
     have 'defeat_condition'=no_leader/no_units/always/never