@@ -1,4 +1,6 @@
 Version 1.11.15+dev:
+ * Add-ons server:
+   * Add-on metadata pattern blacklisting implemented.
  * Language and i18n:
    * Updated translations:
  * Miscellaneous and bug fixes:
